--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "[live-class desc]",
   "dependencies": {
-    "express": "^4.15.2"
+    "bulma": "^0.8.0",
+    "express": "^4.15.2",
+    "firebase": "^7.9.3",
+    "firebaseui": "^4.4.0"
   }
 }
