--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "live-class",
   "version": "0.0.1",
   "description": "[live-class desc]",
+  "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js"
+  },
   "dependencies": {
     "bulma": "^0.8.0",
+    "dotenv": "^8.2.0",
     "express": "^4.15.2",
     "firebase": "^7.9.3",
-    "firebaseui": "^4.4.0"
+    "firebaseui": "^4.4.0",
+    "socket.io": "^2.3.0"
   }
 }
