--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.15.2",
     "firebase": "^7.9.3",
+    "firebase-admin": "^8.9.2",
     "firebaseui": "^4.4.0",
     "socket.io": "^2.3.0"
   }
